@startuml

entity TIEMPO <<Dimension>> {
    **PK | tiempo_id: varchar(20)**
    --
    tiempo_anio: char(4)
    tiempo_mes: char(2)
    tiempo_cuatrimestre: char(1)
}

entity PROVINCIA <<Dimension>> {
    **PK | provincia_id: varchar(60)**
    --
}

entity LOCALIDAD <<Dimension>> {
    **PK | localidad_id: varchar(110)**
    --
    FK | localidad_provincia: varchar(60)
    localidad_nombre: varchar(50)
}

entity EMPLEADO <<Dimension>> {
    **PK | empleado_id: decimal(6,0)**
    --
    empleado_rango_etario: decimal(2,0)
}

entity CLIENTE <<Dimension>> {
    **PK | cliente_id: varchar(50)**
    --
    cliente_rango_etario: decimal(2,0)
}

entity SUCURSAL <<Dimension>> {
    **PK | sucursal_id: decimal(6,0)**
    --
    FK | sucursal_localidad: varchar(110)
    sucursal_direccion: varchar(50)
}

entity RANGO_ETARIO <<Dimension>> {
    **PK | rango_id: decimal(2,0)**
    --
    rango_descripcion: varchar(50)
}

entity TURNO <<Dimension>> {
    **PK | turno_id: decimal(6,0)**
    --
    turno_hora_inicio: datetime
    turno_hora_fin: datetime
}

entity PAGO <<Facts>>{
    **PK,FK | tiempo_id: varchar(20)**
    **PK,FK | medio_pago_id: varchar(50)**
    **PK,FK | sucursal_id: decimal(6,0)**
    **PK | rango_etario_id: decimal(2,0)**
    --
    importe_pago_cuotas: decimal(12,2)
    importe_total: varchar(30)
    descuento_total: decimal(12,2)
}

entity MEDIO_PAGO <<Dimension>> {
    **PK | medio_pago_id: varchar(50)**
    --
    medio_pago_tipo: varchar(30)
}

entity CATEGORIA <<Dimension>> {
    **PK | categoria_id: decimal(8,0)**
    --
}

entity VENTA <<Facts>> {
    **PK,FK | tiempo_id: varchar(20)**
    **PK,FK | sucursal_id: decimal(6,0)**
    **PK,FK | empleado_id: decimal(2,0)**
    **PK,FK | turno_id: decimal(6,0)**
    **PK,FK | categoria_id: decimal(8,0)**
    **PK,FK | tipo_caja_id: varchar(50)**
    --
    importe_total: decimal(12,2)
    subtotal: decimal(12,2) REVISARLO
    cantidad_unidades: decimal(12,0)
}

entity TIPO_CAJA <<Dimension>> {
    **PK | tipo_caja_id: varchar(50)**
    --
    tipo_caja_descripcion: varchar(50)
}

entity PROMOCION <<Facts>> {
    **PK,FK | categoria_id: **
    **PK,FK | tiempo_id: varchar(20)**
    --
    porcentaje_descuento_segun_ticket:
    venta_total_tickets:
    descuento_promocion:
    cantidad_tickets:
}

entity ENVIO <<Facts>> {
    **PK,FK | envio_cliente: **
    **PK,FK | envio_fecha_entrega: **
    **PK,FK | envio_fecha_programada: **
    **PK,FK | sucursal_id: **
    --
    costo_envio_total: decimal(12,2)
    cantidad_envios: int
    envios_cumplidos: int
}

MEDIO_PAGO ||--|{ PAGO

PAGO }|--|| TIEMPO
PAGO }|--|| SUCURSAL

PROMOCION }|--|| TIEMPO
PROMOCION }|--|| CATEGORIA

VENTA }|--|| TIEMPO
VENTA }|--|| SUCURSAL
VENTA }|--|| EMPLEADO
VENTA }|--|| TURNO
VENTA }|--|| CATEGORIA
VENTA }|--|| TIPO_CAJA

ENVIO }|--|| TIEMPO
ENVIO }|--|| SUCURSAL
ENVIO }|--|| CLIENTE

EMPLEADO }|--|| RANGO_ETARIO
CLIENTE }|--|| RANGO_ETARIO

LOCALIDAD }|--|| PROVINCIA
SUCURSAL }|--|| LOCALIDAD



@enduml